--- a/src/views/getOTP.ejs
+++ b/src/views/getOTP.ejs
@@ -47,11 +47,11 @@
     <form method="post" action="" class="box">
       <h2 class="heading">Forgot Password..!</h2>
       <div class="input">
-        <label for="email">Enter Registered email</label>
+        <label for="otp">Enter OTP</label>
         
-        <input type="email" id="email" name="email">
+        <input type="text" id="otp" name="otp">
       </div>
-      <button type="submit">Send OTP</button>
+      <button type="submit">Submit OTP</button>
     </form>
   </div>
 </body>
